--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -295,4 +295,7 @@ ru:
         event: event
         whodunnit: whodunnit
         object: object
-      
+  helpers:
+    label:
+      user:
+        title: 'Customized title'
